# simple-webhook-rust

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: build-and-deploy.yml
src/: error_page.rs  main.rs  webhooks.rs
templates/: error.html  webhooks.html
