[package]
name = "simple-webhook-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
chrono = "0.4.42"
ferris-says = "0.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tracing-subscriber = "0.3.22"
rand = "0.9.2"
askama = "0.14.0"
